# survey-assist-sayt-ui

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CODEOWNERS  CONTRIBUTING.md  Dockerfile  Makefile  PIRR.md  README.md  RELEASING.md  SECURITY.md  mkdocs.yml  package-lock.json  package.json  pyproject.toml  run_cicd_themes_to_sandbox.sh
.github/: pull_request_template.md
.github/workflows/: ci.yml
cicd/: cloudbuild_dev_and_sandbox.yaml  cloudbuild_promote_preprod.yaml
cicd/tests/: run_smoke_tests.sh  test_smoke_tests.py
docs/: guide.md  index.md
frontend/js/: remote-autosuggest.js
scripts/: fetch_ons_templates.py  fetch_ons_templates.sh  provision_users.py
src/ons_flask_auth_template/: __init__.py  app.py  config.py
src/ons_flask_auth_template/app_templates/: accessibility.html  base.html  cookies.html  core.html  login.html  privacy.html
src/ons_flask_auth_template/auth/: routes.py  service.py
src/ons_flask_auth_template/routes/: main.py
src/survey_assist_sayt_ui/: __init__.py  app.py  config.py
src/survey_assist_sayt_ui/app_templates/: business_activity.html  business_activity_api.html  confirmation.html  core.html  index.html  survey.html  survey_api_autosuggest.html  survey_complete.html  survey_guidance.html  survey_intro.html  survey_intro_raw.html  (+1 more)
tests/: conftest.py  test_auth.py  test_auth_flow.py
tests/auth/: test_routes.py  test_service.py
tests/routes/: test_main.py
tests/services/: test_business_activity.py
tests/survey/: test_loader.py  test_placeholders.py  test_session.py  test_survey.py
(+16 files in other folders)
