[project]
name = "survey-assist-sayt-ui"
version = "0.1.0"
description = "Containerised Flask template using the ONS Design System and lightweight password authentication."
authors = [
    {name = "Steve Gibbard",email = "steve.gibbard@ons.gov.uk"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
license = "MIT"
packages = [{ include = "survey_assist_sayt_ui", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.2"
google-cloud-storage = "^3.9.0"
werkzeug = "^3.1.3"
httpx = "^0.28.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.8"
mypy = "^1.10.0"
pytest = ">=9.0.3"
pytest-cov = "^5.0.0"
bandit = "^1.7.9"
pre-commit = "^3.7.0"
pylint = "^4.0.6"
mkdocs-material = "^9.7.6"
detect-secrets = "^1.5.0"
deptry = "^0.25.1"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["survey_assist_sayt_ui"]
force-sort-within-sections = true

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
branch = true
source = ["src/survey_assist_sayt_ui"]

[tool.coverage.report]
show_missing = true
fail_under = 70

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
